# Summer-School-Agentic-AI

./: README.md
n8n_localhost/: .env.example  .gitignore  DB_ACCESS.md  Dockerfile  README.md  n8n.yaml
self_hosting/: .env.example  SETUP.md  app.py  compose.yaml  pyproject.toml
tutorial/: TRACK_3_Training_AI_Agents_in_N8N.md
